--- a/Web_app/Index.html
+++ b/Web_app/Index.html
@@ -99,14 +99,14 @@
         // Replace with your actual Firebase project configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-            apiKey: "AIzaSyCtQFHllFrIKIWhZiflNkV-4fVxl6yg5m0",
-            authDomain: "liencesplayeai.firebaseapp.com",
-            databaseURL: "https://liencesplayeai-default-rtdb.firebaseio.com",
-            projectId: "liencesplayeai",
-            storageBucket: "liencesplayeai.firebasestorage.app",
-            messagingSenderId: "516014751151",
-            appId: "1:516014751151:web:68baec2887916762eb035a",
-            measurementId: "G-Z3M750GZQZ"
+            apiKey: "API_KEY",
+            authDomain: "PROJECT_ID.firebaseapp.com",
+            databaseURL: "https://PROJECT_ID.firebaseio.com",
+            projectId: "PROJECT_ID",
+            storageBucket: "PROJECT_ID.appspot.com",
+            messagingSenderId: "SENDER_ID",
+            appId: "Your app id",
+            measurementId: "Your measurement id"
         };
 
         // Global variables
