--- a/Web_app/Index.html
+++ b/Web_app/Index.html
@@ -61,12 +61,12 @@
             <div id="currentVehiclesList" class="vehicles-list"></div>
         </div>
 
-        <!-- Recent Activity Section -->
+        <!-- Activity Section -->
         <div class="activity-section">
-            <h2> Recent Activity</h2>
+            <h2> Activities</h2>
             <div class="activity-tabs">
-                <button class="tab-button active" onclick="showTab('entries')">Recent Entries</button>
-                <button class="tab-button" onclick="showTab('exits')">Recent Exits</button>
+                <button class="tab-button active" onclick="showTab('entries')">Entried</button>
+                <button class="tab-button" onclick="showTab('exits')">Exited</button>
             </div>
             <div id="recentEntriesList" class="activity-list"></div>
             <div id="recentExitsList" class="activity-list" style="display: none;"></div>
